[package]
name = "looklocker-t1map"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
mimalloc = { version = "0.1", default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
levenberg-marquardt = "0.15.0"
nalgebra = "0.34.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
nifti = "0.17.0"
rayon = "1.11.0"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3
